tests/testcases/02-not_enum.stderr
error: derive_query can only derive from enum.
 --> $DIR/02-not_enum.rs:2:1
  |
2 | / struct Query1 {
3 | |     a: i64,
4 | |     b: char,
5 | | }
  | |_^

error: derive_query can only derive from enum.
 --> $DIR/02-not_enum.rs:7:1
  |
7 | struct Query2(i64, char);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
